# notepadsimple

./: .gitignore  README.md  direitos_autorais  main.py  pyproject.toml  requirements.txt  teste.py
components/: caixa_texto.py  menu_arquivo.py  menu_editar.py  menu_formatar.py  menu_principal.py
pages/: pagemain.py  pageopen.py  pagereplace  pagereplace.py  pagesave.py
services/: filetxt.py  fontes.py  uteis.py
src/: main.py
src/components/: caixa_texto.py  menu_arquivo.py  menu_editar.py  menu_formatar.py  menu_principal.py  scroolbar_y.py
src/pages/: pagemain.py  pageopen.py  pagereplace.py  pagesave.py  teste.py
src/repository/: filetxt.py
src/services/: fontes.py  pagemain_bloc.py  uteis.py
