[project]
name = "notepadsimplelinux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens==3.0.0",
    "bcrypt==3.2.0",
    "blinker==1.4",
    "certifi==2020.6.20",
    "chardet==4.0.0",
    "click==8.0.3",
    "colorama==0.4.4",
    "cryptography==3.4.8",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "decorator==5.2.1",
    "distro==1.7.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fasteners==0.14.1",
    "future==0.18.2",
    "httplib2==0.20.2",
    "icoextract==0.1.2",
    "importlib-metadata==4.6.4",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jeepney==0.7.1",
    "keyring==23.5.0",
    "launchpadlib==1.10.16",
    "lazr-restfulclient==0.14.4",
    "lazr-uri==1.0.6",
    "lockfile==0.12.2",
    "macaroonbakery==1.3.1",
    "mako==1.1.3",
    "markupsafe==2.0.1",
    "matplotlib-inline==0.1.7",
    "monotonic==1.6",
    "more-itertools==8.10.0",
    "netifaces==0.11.0",
    "oauthlib==3.2.0",
    "olefile==0.46",
    "packaging==25.0",
    "paramiko==2.9.3",
    "parso==0.8.4",
    "pefile==2021.9.3",
    "pexpect==4.8.0",
    "pillow==10.4.0",
    "prompt-toolkit==3.0.51",
    "protobuf==3.12.4",
    "psutil==5.9.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyjwt==2.3.0",
    "pymacaroons==0.13.0",
    "pynacl==1.5.0",
    "pyparsing==2.4.7",
    "pyrfc3339==1.1",
    "python-dateutil==2.8.1",
    "pytz==2022.1",
    "pyxdg==0.27",
    "pyyaml==6.0",
    "reportlab==3.6.8",
    "requests==2.25.1",
    "secretstorage==3.3.1",
    "six==1.16.0",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "ttkbootstrap==1.14.2",
    "typing-extensions==4.14.1",
    "urllib3==1.26.5",
    "wadllib==1.3.6",
    "wcwidth==0.2.13",
]

[dependency-groups]
dev = [
    "ruff",
]
